nivasa-macros/tests/trybuild/schedule_cron_invalid_literal.stderr
error: `#[cron]` expects a cron expression like `#[cron("0 */5 * * * *")]`
 --> tests/trybuild/schedule_cron_invalid_literal.rs:6:5
  |
6 |     #[cron(5000)]
  |     ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cron` (in Nightly builds, run with -Z macro-backtrace for more info)
